# devillint-cli

./: .gitignore  README.md  README_devillint.md  pyproject.toml  requirements-dev.txt
apps/django_project/: README.md  manage.py
devillint/: audit.py  check.py  generate.py
devillint/cli/: main.py
devillint/templates/: .env
devillint/templates/apps/accounts/: __init__.py  admin.py  apps.py  forms.py  models.py  permissions.py  signals.py  urls.py  views.py
devillint/templates/apps/accounts/migrations/: 0001_initial.py
docs/teste1/: checklist.md  estrutura.md  index.md
