[project]
name = "devillint"
version = "0.1.0"
description = "CLI e boas práticas para projetos Django/React"
authors = [
  { name="mandresoeiro" }
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"

[project.scripts]
devillint = "devillint.cli.main:main"  # ← Ponto de entrada correto!

[tool.setuptools]
packages = ["devillint", "devillint.cli"]
